--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <meta property="og:url" content="https://sofi.pipinstall.com">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
+        <!-- Favicon - Complete Package -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
+    <link rel="manifest" href="./assets/site.webmanifest">
+    <link rel="shortcut icon" href="./assets/favicon.ico">
     
     <!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css">
